--- a/website.html
+++ b/website.html
@@ -1,10 +1,26 @@
-<button>
-   Hello
- </button>
-<p> 
-  paragraph of text 
+<!DOCTYPE html>
+<html>
+ <head>
+   <title> First Website </title>
+ </head>
+ <body>
+  <button>
+    Hello
+  </button>
+ <p> 
+   paragraph of text 
+ 
+ </p>
+ <a href="https://www.youtube.com/" target="_blank"> 
+  Link to Youtube 
+ </a>
+ </body>
 
-</p>
-<a href="https://www.youtube.com/" target="_blank"> 
- Link to Youtube 
-</a>
+</html>
+
+
+
+
+
+
+
